--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -14,7 +14,7 @@ jobs:
         time: '45s'
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: cd ./whatever
+      run: echo "hello"
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
