--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -14,10 +14,10 @@ jobs:
     - name: Sleep for 30 seconds
       uses: jakejarvis/wait-action@master
       with:
-        time: '45s'
+        time: '30s'
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: cd /whatever
+      run: echo Hello
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
